CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

18 June 2008
+ Removed unsigned calls in the core update.
+ Database : Added function alterColumnType
+ DBPager : current page is now bracketed and unlinked
+ setRequired will post a javascript alert if the required input it
  left blank. Works with text fields only at this point. More left to
  do.
+ js_calendar : fixed error notice
+ Updated files: javascript/js_calendar/default.php
                 javascript/required_input


13 June 2008
+ DBPager : cacheQueries works better now especially with
  setDefaultOrder.
+ Key : trimming the summary result.
+ added microsoft office document as identifier to file types.
+ Added cacheQueries information to DBPager documentation.
+ Updated: conf/file_types.php

11 June 2008
+ Updated jquery to 1.2.6
+ Added jcarousel lite from filecabinet
+ Added Ganeshji Marwaha to CREDITS file for above plugin
+ Updated: javascript/jquery/jcarousellite.js

Version 1.8.2
----------------------------------------------------------------------
6 June 2008
+ Added clock mode to js_calendar
+ Updated js_calendar to most recent version.
+ Removed isIIS.

5 June 2008
+ Added isIIS function to Core to detect IIS web server installation
+ Fixing local directory function in setup as recommended by
  byerkes. Should prevent IIS errors.

4 June 2008
+ Added column existence check to Database's dropTableColumn
+ unsigned removed from import now, not worked around
+ Key's ceiling was changed to 2137400000 to conform with int limits

3 June 2008
+ Removed warning from Database.php begin function.
+ Added check for unsigned in the Database::homogenize function.

30 May 2008
+ created default htaccess file in core/inc/. Access and Branch module
  updated to accommodate change.

29 May 2008
+ added a force_name parameter to useEditor. Allows the dev to specify
  which tool to use.
+ Added comment about the use_filter parameter in parseOutput.